--- a/templates/index.plush.html
+++ b/templates/index.plush.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
   <div class="container">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2 logo">
@@ -61,4 +61,6 @@
     </div>
   </div>
 </div>
-<div class="foot"> <span> Powered by <a href="http://gobuffalo.io/">gobuffalo.io</a></span> </div>
+<div class="foot"> <span> Powered by <a href="http://gobuffalo.io/">gobuffalo.io</a></span> </div> -->
+
+<h1>Hello!</h1>
