--- a/templates/boards/index.plush.html
+++ b/templates/boards/index.plush.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center">
-  <h1>掲示板一覧</h1>
+  <h1>タスク一覧</h1>
   <div class="ml-auto boards__linkBox">
     <a href='/boards/new' class="btn btn-outline-dark">新規作成</a>
   </div>
@@ -8,8 +8,8 @@
   <thead class="thead-dark">
     <tr>
       <th>ID</th>
-      <th>タイトル</th>
-      <th>作成者</th>
+      <th>Task</th>
+      <th>Name</th>
       <th>作成日時</th>
       <th>更新日時</th>
     </tr>
@@ -18,8 +18,8 @@
     <%= for (board) in (boards) { %>
     <tr>
       <th><%= board.ID %></th>
-      <th><%= board.Title %></th>
-      <th><%= board.Name %></th>
+      <th><%= board.Task %></th>
+      <th><%= board.Memo %></th>
       <th><%= board.CreatedAt %></th>
       <th><%= board.UpdatedAt %></th>
     </tr>
