--- a/templates/boards/index.plush.html
+++ b/templates/boards/index.plush.html
@@ -6,7 +6,7 @@
 </div>
 <table class="table table-hover boards__table">
   <thead class="thead-dark">
-    <tr>
+    <tr id="memo">
       <th>ID</th>
       <th>Task</th>
       <th>Name</th>
@@ -19,7 +19,7 @@
     <tr>
       <th><%= board.ID %></th>
       <th><%= board.Task %></th>
-      <th><%= board.Memo %></th>
+      <th><%= board.Name %></th>
       <th><%= board.CreatedAt %></th>
       <th><%= board.UpdatedAt %></th>
     </tr>
