--- a/templates/boards/index.plush.html
+++ b/templates/boards/index.plush.html
@@ -4,12 +4,13 @@
     <a href='/boards/new' class="btn btn-outline-dark">新規作成</a>
   </div>
 </div>
-<table class="table table-hover boards__table">
+<table class="table table-hover boards__table table-striped">
   <thead class="thead-dark">
     <tr id="memo">
       <th id="id">ID</th>
       <th id="family">Family Name</th>
       <th id="first">First Name</th>
+      <th id="first">Button</th>
     </tr>
   </thead>
   <tbody>
@@ -18,6 +19,8 @@
       <th class='number'><%= board.ID %></th>
       <th class='family'><%= board.FamilyName %></th>
       <th class='first'><%= board.FirstName %></th>
+      <th button class="btn btn-success btn-sm edit-button">Edit</button>
+      <th button class="btn btn-danger btn-sm delete-button">Delete</button>
     </tr>
     <% } %>
   </tbody>
