--- a/templates/boards/index.plush.html
+++ b/templates/boards/index.plush.html
@@ -16,7 +16,7 @@
   <tbody>
     <%= for (board) in (boards) { %>
     <tr class="profile">
-      <th class='number'><%= board.ID %></th>
+      <th class='id'><%= board.ID %></th>
       <th class='family'><%= board.FamilyName %></th>
       <th class='first'><%= board.FirstName %></th>
       <th>
@@ -24,9 +24,8 @@
         <button class="btn btn-success btn-sm edit-button">Edit</button>
         <% } %>
         <%= form({action: boardPath({id: board.ID}), method: "DELETE"}) { %>
-        <button class="btn btn-danger btn-sm delete-button">Delete</button>
+        <button class="btn btn-danger btn-sm delete-button" onClick="return Check()">Delete</button>
         <% } %>
-        <!-- <a href='/boards/delete/' data-method="delete" class="btn btn-danger btn-sm delete-button">Delete</a> -->
       </th>
     </tr>
     <% } %>
