--- a/templates/boards/new.plush.html
+++ b/templates/boards/new.plush.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center">
   <h1>List作成</h1>
   <div class="ml-auto boards__linkBox">
-    <a href='/' class="btn btn-outline-dark">掲示板一覧</a>
+    <a href='/' class="btn btn-outline-dark">名簿一覧</a>
   </div>
 </div>
 <%= form_for(board, {action: boardsPath(), method: "POST"}) { %>
